Fixes a button size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,7 @@ a.active {
   article {width: 96%;}
   body {/*background-color: red*/; font-size: 2vw;}
   .btn {font-size:120%;}
-  .btn-fix{font-size: 200%;}
+  .btn-fix{font-size: 220%;}
 
   .grid-container-foot{display: flex; /*-- sets the display mode--*/
     flex-direction: column; /*-- sets direction row or column --*/
